using welcomecontroller again :(

--- a/app/components/newsletter/newsletter.html
+++ b/app/components/newsletter/newsletter.html
@@ -1,1 +1,2 @@
 <iframe srcdoc="{{news.frame_content}}" name="newsletter_frame" id="framed_newsletter" style="border: none; margin-top: 30px; height: 1500px; width: 100%;"></iframe>
+If this page isn't loading, you may login at <a href="https://newsletter.startupcommunity.org" target="_blank">newsletter.startupcommunity.org</a> with username: {{news.user.newsletter.username}} and password: {{news.user.newsletter.password}}
