--- a/app/components/resources/resource.add.html
+++ b/app/components/resources/resource.add.html
@@ -1,40 +1,40 @@
 <div class="inmodal">
     <div class="color-line"></div>
-    <div class="modal-header" ng-show="!add.update">
+    <div class="modal-header">
         <h4 class="modal-title">Add a resource to {{::add.community.profile.name}}</h4>
         <p class="font-bold">Resources include coworking spaces, accelerators, investment funds, networking events, and other organizations that support entrepreneurship.</p>
     </div>
     <div class="modal-body">
         <div class="hpanel">
-            <div style="text-align:center;">
-                <img style="height:75px;" ngf-thumbnail="add.selectedResource.thumb_url || file || '/public/images/blank_startup.jpg'">
+            <div style="text-align:center;" ng-show="add.selectedCompany.name">
+                <img style="height:75px;" ngf-thumbnail="add.selectedCompany.thumb_url || file || '/public/images/blank_startup.jpg'">
                 <h4 ng-show="add.update">{{::add.community.profile.name}}</h4>
                 <br/>
                 <label id="uploader_text">
                     <input type="file" ng-model="logo_thumbnail" name="file" ngf-pattern="'image/*'"
                            accept="image/*" ngf-max-size="2MB" ngf-min-height="50"
                            ngf-resize="{width: 75, height: 75}" ngf-select="add.uploadLogo($file)" style="display:none;"/>
-                    <h6>Change thumbnail..</h6>
+                    <h6>Change thumbnail (75x75)..</h6>
                 </label>
             </div>
             <div style="padding: 20px;">
 
-                <div class="form-group" ng-show="!add.update">
-                    <input type="text" placeholder="Resource name.." ng-model="add.selectedResource.name" class="form-control input-lg">
+                <div class="form-group">
+                    <input type="text" placeholder="Type the resource name.." ng-model="add.selectedCompany.name" class="form-control input-lg">
                 </div>
-                <div style="padding-top: 10px;" ng-show="add.selectedResource.name">
+                <div style="padding-top: 10px;" ng-show="add.selectedCompany.name">
                     <h4 style="line-height:1.75;">
-                        Your primary role at {{add.selectedResource.name}} is <a href="#" editable-select="add.selectedRole" e-ng-options="r.value as r.text for r in add.selectRoles">{{ add.selectedRole }}</a>.<br/>
-                        {{add.selectedResource.name}}'s headline is <a style="color:#4ea5e0;" editable-text="add.selectedResource.headline">{{add.selectedResource.headline || 'empty'}}</a>.
+                        Your primary role at {{add.selectedCompany.name}} is <a href="#" editable-select="add.selectedRole" e-ng-options="r.value as r.text for r in add.selectRoles">{{ add.selectedRole }}</a>.<br/>
+                        {{add.selectedCompany.name}}'s headline is <a style="color:#4ea5e0;" editable-text="add.selectedCompany.headline">{{add.selectedCompany.headline || 'empty'}}</a>.
                         <br><br>
-                        Select a primary industry for {{add.selectedResource.name}}:
-                        <select class="form-control m-b" ng-model="add.selectedResource.parent" style="margin-bottom: 5px;" required>
+                        Select a primary industry for {{add.selectedCompany.name}}:
+                        <select class="form-control m-b" ng-model="add.selectedCompany.parent" style="margin-bottom: 5px;" required>
                             <option ng-repeat="parent in add.parents">{{ parent }}</option>
                         </select>
                         <br>
-                        Add up to six specific markets {{add.selectedResource.name}} is a part of:
+                        Add up to six specific markets {{add.selectedCompany.name}} is a part of:
                         <div class="panel-body industry_select" style="padding:1px; margin-top: 6px; margin-bottom: 6px;">
-                            <ui-select multiple ng-model="add.selectedResource.industries" tagging="true" tagging-label="(new)" ng-disabled="disabled" limit="6" alert_title="Sorry, only 6 items here." alert_text="Focus on markets that this resource specializes in." alert_type="warning" style="border:none;">
+                            <ui-select multiple ng-model="add.selectedCompany.industries" tagging="true" tagging-label="(new)" ng-disabled="disabled" limit="6" alert_title="Sorry, only 6 items here." alert_text="Focus on markets that this resource specializes in." alert_type="warning" style="border:none;">
                                 <ui-select-match placeholder="Search for markets..">{{$item}}</ui-select-match>
                                 <ui-select-choices repeat="industry in add.industries | filter:$select.search | limitTo: 25">
                                     {{industry}}
@@ -42,11 +42,11 @@
                             </ui-select>
                         </div>
                         <br/>
-                        Click below to edit {{add.selectedResource.name}}'s summary:
+                        Click below to edit {{add.selectedCompany.name}}'s summary:
                     </h4>
                     <div class="summary_form">
-                        <a editable-textarea="add.selectedResource.product_desc" e-rows="12" e-cols="60">
-                            <pre style="background: none; font-family: inherit; font-size: 14px; text-align: left;">{{add.selectedResource.product_desc || 'Nothing here!'}}</pre>
+                        <a editable-textarea="add.selectedCompany.product_desc" e-rows="12" e-cols="60">
+                            <pre style="background: none; font-family: inherit; font-size: 14px; text-align: left;">{{add.selectedCompany.product_desc || 'Nothing here!'}}</pre>
                         </a>
                     </div>
                 </div>
@@ -56,9 +56,9 @@
     <div alert-box this-alert="add.alert" style="padding-top:10px;"></div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" ng-click="$close();$state.reload();" style="margin-right: 10px;"><span ng-show="!add.alert">Cancel</span><span ng-show="add.alert">Close</span></button>
-        <button type="button" class="btn btn-danger pull-left" ng-click="add.deleteResource(add.community.key)" ng-show="add.update && !add.alert">Delete {{::add.community.profile.name || 'Resource'}}</button>
-        <input ng-show="!add.updated" ng-click="add.addResource($event)" type="submit" class="finish btn-success btn pull-right" ng-class="{'disabled' : disabled || add.working || !add.selectedResource}" value="{{ (add.updateResource ? 'Update ' : 'Add ') + (add.selectedResource.name || 'Resource') }}"/>
-        <button type="button" class="btn btn-default pull-right" style="margin-right: 15px;" ng-show="add.selectedResource && !add.working && !add.update" ng-click="add.selectedResource = undefined; add.resource = undefined; add.alert = undefined; add.updateRole = false; add.selectedRole = 'none'; add.updateResource = false; add.submitted = false; add.notlisted = false; add.dups = undefined;">Clear Form
+        <button type="button" class="btn btn-danger pull-left" ng-click="add.deleteCompany(add.community.key)" ng-show="add.update && !add.alert">Delete {{::add.community.profile.name || 'Resource'}}</button>
+        <input ng-show="!add.updated" ng-click="add.addCompany($event, true)" type="submit" class="finish btn-success btn pull-right" ng-class="{'disabled' : disabled || add.working || !add.selectedCompany}" value="{{ (add.updateCompany ? 'Update ' : 'Add ') + (add.selectedCompany.name || 'Resource') }}"/>
+        <button type="button" class="btn btn-default pull-right" style="margin-right: 15px;" ng-show="add.selectedCompany && !add.working && !add.update" ng-click="add.selectedCompany = undefined; add.company = undefined; add.alert = undefined; add.updateRole = false; add.selectedRole = 'none'; add.updateCompany = false; add.submitted = false; add.notlisted = false; add.dups = undefined;">Clear Form
             <div loading-bars ng-show="add.working" style="padding-top: 5px; float: left;"></div>
         </button>
     </div>
