--- a/app/components/companies/company.list.html
+++ b/app/components/companies/company.list.html
@@ -89,7 +89,7 @@
 
 
 
-        <div ng-class="{'col-lg-10 col-md-9 col-sm-8' : !$state.includes('search.*') && !nav.embedded}" style="padding-left: 15px; padding-right: 15px;">
+        <div ng-class="{'col-lg-10 col-md-9 col-sm-8' : !$state.includes('search.*')}" style="padding-left: 15px; padding-right: 15px;">
 
             <div class="hpanel">
                 <div class="panel-footer top">
