--- a/app/components/resources/resource.add.html
+++ b/app/components/resources/resource.add.html
@@ -24,7 +24,9 @@
                 </div>
                 <div style="padding-top: 10px;" ng-show="add.selectedCompany.name">
                     <h4 style="line-height:1.75;">
-                        Your primary role at {{add.selectedCompany.name}} is <a href="#" editable-select="add.selectedRole" e-ng-options="r.value as r.text for r in add.selectRoles">{{ add.selectedRole }}</a>.<br/>
+                        Your primary role at {{add.selectedCompany.name}} is
+                        <select class="btn btn-default btn-outline" style="padding-left: 5px;margin-left: 3px;margin-top: -4px;" ng-model="add.selectedRole" ng-options="r.value as r.text for r in add.selectRoles"></select>
+                        <br/>
                         {{add.selectedCompany.name}}'s headline is <a style="color:#4ea5e0;" editable-text="add.selectedCompany.headline">{{add.selectedCompany.headline || 'empty'}}</a>.
                         <br><br>
                         Select a primary industry for {{add.selectedCompany.name}}:
@@ -32,15 +34,6 @@
                             <option ng-repeat="parent in add.parents">{{ parent }}</option>
                         </select>
                         <br>
-                        Add up to six specific markets {{add.selectedCompany.name}} is a part of:
-                        <div class="panel-body industry_select" style="padding:1px; margin-top: 6px; margin-bottom: 6px;">
-                            <ui-select multiple ng-model="add.selectedCompany.industries" tagging="true" tagging-label="(new)" ng-disabled="disabled" limit="6" alert_title="Sorry, only 6 items here." alert_text="Focus on markets that this resource specializes in." alert_type="warning" style="border:none;">
-                                <ui-select-match placeholder="Search for markets..">{{$item}}</ui-select-match>
-                                <ui-select-choices repeat="industry in add.industries | filter:$select.search | limitTo: 25">
-                                    {{industry}}
-                                </ui-select-choices>
-                            </ui-select>
-                        </div>
                         <br/>
                         Click below to edit {{add.selectedCompany.name}}'s summary:
                     </h4>
