--- a/app/components/resources/resource.list.html
+++ b/app/components/resources/resource.list.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-6" ng-repeat="parent in resource.network_parents track by $index" ng-if="resource.network_parents.length > 0">
+    <div class="col-xs-12 col-sm-6" ng-repeat="parent in resource.resource_types track by $index" ng-if="resource.resource_types.length > 0">
         <div class="hpanel" ng-class="::parent.color">
             <div class="panel-body" style="padding: 10px 5px;">
                 <div class="col-xs-8">
@@ -14,8 +14,8 @@
                 </div>
             </div>
             <div class="panel-footer" style="background: #fff;">
-                <ul class="nav nav-second-level" ng-if="resource.networks[parent.id]">
-                    <li ng-repeat="item in resource.networks[parent.id] track by $index">
+                <ul class="nav nav-second-level" ng-if="resource.networks[parent.title]">
+                    <li ng-repeat="item in resource.networks[parent.title] track by $index">
                         <div class="col-md-12">
                             <a ui-sref="{{'community.dashboard' + resource.nav_jump}}">
                                 <strong>{{item.community_profiles[resource.location.key].name}}</strong></i>
@@ -34,5 +34,5 @@
         </div>
     </div>
 
-    <div ng-show="resource.network_parents.length === 0" style="text-align: center" ng-cloak><h2><br/>Nothing here!</h2><br/><br/></div>
+    <div ng-show="resource.resource_types.length === 0" style="text-align: center" ng-cloak><h2><br/>Nothing here!</h2><br/><br/></div>
 </div>
