--- a/app/components/resources/resource.add.html
+++ b/app/components/resources/resource.add.html
@@ -1,7 +1,7 @@
 <div class="inmodal">
     <div class="color-line"></div>
     <div class="modal-header">
-        <h4 class="modal-title">Add a resource to {{::add.community.profile.name}}</h4>
+        <h4 class="modal-title">Add a resource to <span ng-bind-html="::add.community.profile.name"></span></h4>
         <p class="font-bold">Resources include coworking spaces, accelerators, investment funds, networking events, and other organizations that support entrepreneurship.</p>
     </div>
     <div class="modal-body">
@@ -10,12 +10,12 @@
             <div style="padding: 20px;">
 
                 <div class="form-group">
-                    <input type="text" placeholder="Type the resource name.." ng-model="add.selectedCompany.name" ng-model-options="{ debounce: 300 }" class="form-control input-lg">
+                    <input type="text" placeholder="Type the resource name.." ng-model="add.selectedCompany.name" ng-model-options="{ debounce: 300, blur: 0 }" class="form-control input-lg">
                 </div>
                 <div ng-if="add.selectedCompany.name">
                     <div style="text-align:center;">
                         <img ng-show="!add.loadimg" style="height:75px;" ngf-thumbnail="add.selectedCompany.avatar || avatar || '/public/images/blank_startup.jpg'">
-                        <h4 ng-show="add.update">{{::add.community.profile.name}}</h4>
+                        <h4 ng-show="add.update" ng-bind-html="::add.community.profile.name"></h4>
                         <br/>
                         <label id="uploader_text">
                             <input type="file" ng-model="avatar" name="file" ngf-pattern="'image/*'"
@@ -40,7 +40,7 @@
                             Select a primary industry:
 
                             <select class="form-control m-b" ng-model="add.selectedCompany.parent" style="margin-bottom: 5px;" required>
-                                <option ng-repeat="parent in add.parents">{{ parent }}</option>
+                                <option ng-repeat="parent in add.parents">{{ ::parent }}</option>
                             </select>
                             <br>
 
@@ -49,7 +49,7 @@
                             <select class="btn btn-default btn-outline" style="padding-left: 5px;margin-left: 3px;margin-top: -4px;" ng-model="add.selectedRole" ng-options="r.value as r.text for r in add.selectRoles"></select>
                             <br><br>
 
-                            The headline for {{ add.selectedCompany.name }} is <a style="color:#4ea5e0;" editable-text="add.selectedCompany.high_concept">{{add.selectedCompany.high_concept || 'empty'}}</a>.
+                            The headline for <span ng-bind-html="add.selectedCompany.name"></span> is <a style="color:#4ea5e0;" editable-text="add.selectedCompany.high_concept">{{add.selectedCompany.high_concept || 'empty'}}</a>.
                             <br><br>
 
                             Click below to edit the summary:
