updated newtork add modal

--- a/app/components/nav/nav.edit_cluster.html
+++ b/app/components/nav/nav.edit_cluster.html
@@ -38,7 +38,7 @@
                         </ui-select-choices>
                     </ui-select>
                 </div>
-                <em>Your industries will consist of companies that have associated themselves with these markets.</em>
+                <em>Your industry will consist of companies that have associated themselves with these markets.</em>
                 <div class="m-t-xs" ng-show="!edit.communityForm.industries && edit.submitted">
                     <span class="text-danger">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> At least one market is required.</span>
                 </div>
